# origo

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  vcpkg.json
docs/: index.md
include/origo/: origo.hpp
include/origo/graphics/: buffer.hpp  shader.hpp  window.hpp
origo/: origo.hpp
origo/src/graphics/: buffer.hpp  window.hpp
origo/src/graphics/implementations/opengl/: buffer.cpp  window.cpp
src/graphics/implementations/opengl/: buffer.cpp  shader.cpp  window.cpp
src/util/: files.cpp  files.hpp
